Ya estan los graficos de S1 para wifi.

--- a/analisis/S1.ipynb
+++ b/analisis/S1.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -133,13 +133,13 @@
       "\\begin{tabular}{llrrr}\n",
       "\\toprule\n",
       "          &     &  Cantidad de Paquetes &  Probabilidad &  Información [Bits] \\\\\n",
-      "Tipo & Protocolo &                       &               &                     \\\\\n",
+      "\\textbf{Tipo} & \\textbf{Protocolo} &                       &               &                     \\\\\n",
       "\\midrule\n",
-      "unicast & ARP &                    40 &      0.009023 &            4.707952 \\\\\n",
-      "broadcast & ARP &                   280 &      0.063163 &            2.762042 \\\\\n",
-      "          & IP &                   348 &      0.078502 &            2.544629 \\\\\n",
-      "unicast & IPv6 &                   663 &      0.149560 &            1.900057 \\\\\n",
-      "          & IP &                  3102 &      0.699752 &            0.357029 \\\\\n",
+      "\\textbf{unicast} & \\textbf{ARP} &                    40 &      0.009023 &            4.707952 \\\\\n",
+      "\\textbf{broadcast} & \\textbf{ARP} &                   280 &      0.063163 &            2.762042 \\\\\n",
+      "          & \\textbf{IP} &                   348 &      0.078502 &            2.544629 \\\\\n",
+      "\\textbf{unicast} & \\textbf{IPv6} &                   663 &      0.149560 &            1.900057 \\\\\n",
+      "          & \\textbf{IP} &                  3102 &      0.699752 &            0.357029 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -174,8 +174,8 @@
       "\\toprule\n",
       "{} &  Información [Bits] \\\\\n",
       "\\midrule\n",
-      "Entropia fuente &            0.950702 \\\\\n",
-      "Entropía máxima &            1.609438 \\\\\n",
+      "\\textbf{Entropia fuente} &            0.950702 \\\\\n",
+      "\\textbf{Entropía máxima} &            1.609438 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -186,7 +186,7 @@
     "tablaentropia = pd.Series({'Entropia fuente': entropia, 'Entropía máxima': max_entropia}).to_frame(name = \"Información [Bits]\")\n",
     "print(tablaentropia)\n",
     "print()\n",
-    "print(tablaentropia.to_latex())"
+    "print(tablaentropia.to_latex(bold_rows=True))"
    ]
   },
   {
