--- a/analisis/S1.ipynb
+++ b/analisis/S1.ipynb
@@ -186,7 +186,7 @@
     "tablaentropia = pd.Series({'Entropia fuente': entropia, 'Entropía máxima': max_entropia}).to_frame(name = \"Información [Bits]\")\n",
     "print(tablaentropia)\n",
     "print()\n",
-    "print(tablaentropia.to_latex(bold_rows=True))"
+    "print(tablaentropia.to_latex())"
    ]
   },
   {
